--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
 canvas {
 	border: 1px solid black;
 }
+
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+div {
+	margin-left: auto;
+	margin-right: auto
+}
