--- a/index.css
+++ b/index.css
@@ -1,10 +1,16 @@
 canvas {
+	margin-top: 50px;
 	border: 1px solid black;
+}
+
+.title {
+	color: rgb(150,0,255);
 }
 
 body {
 	display: flex;
 	flex-direction: column;
+	background-color: black
 }
 
 div {
